syntax = "proto3";

package analysis;

option go_package = "./proto;analysis";

message VideoToAnalyzeRequest {
  string bucket = 1;
  string object_key = 2;
  string exercise_name = 3;
  string auth0_id = 4;
  int64 video_id = 5;
}

message VideoToAnalyzeResponse {
  bool success = 1;
  string message = 2;
}

service Orchestrator {
  rpc AnalyzeVideo(VideoToAnalyzeRequest) returns (VideoToAnalyzeResponse);
}